# FEUP-ROBO-Driving-Referee

./: .gitignore  .gitmodules  README.md  README.txt  parking_visualization.skp  run.py  track_bounds.skp  track_visualization.skp  transformed.world  transformed_first.world  transformtrack.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/conde_control/: conde_control_node
devel/lib/conde_decision/: conde_decision_node
devel/lib/conde_signalling_panel/: conde_signalling_panel_node
devel/lib/conde_tracking/: conde_tracking_node
devel/lib/gazebo_signalling_panel_control/: gazebo_signalling_panel_control_node
devel/lib/gazebo_traffic_sign/: gazebo_traffic_sign_node
devel/lib/pkgconfig/: conde_control.pc  conde_decision.pc  conde_key_teleop.pc  conde_signalling_panel.pc  conde_tracking.pc  conde_world.pc  gazebo_signalling_panel_control.pc  gazebo_traffic_sign.pc
devel/share/conde_control/cmake/: conde_controlConfig.cmake
devel/share/conde_decision/cmake/: conde_decisionConfig.cmake
devel/share/conde_key_teleop/cmake/: conde_key_teleopConfig.cmake
devel/share/conde_signalling_panel/cmake/: conde_signalling_panelConfig.cmake
devel/share/conde_tracking/cmake/: conde_trackingConfig.cmake
devel/share/conde_world/cmake/: conde_worldConfig.cmake
devel/share/gazebo_signalling_panel_control/cmake/: gazebo_signalling_panel_controlConfig.cmake
devel/share/gazebo_traffic_sign/cmake/: gazebo_traffic_signConfig.cmake
src/: CMakeLists.txt
src/conde_simulator/conde_world/: CMakeLists.txt  ContactPlugin.cc  ContactSemaphorePlugin.cc  ContactSemaphorePlugin.hh  package.xml
src/conde_simulator/conde_world/materials/scripts/: yellow.material
src/conde_simulator/conde_world/meshes/: parking_bound_1.stl  parking_bound_2.stl  parking_ground.stl  parking_visualization.stl  track_bounds.stl  track_inside.stl  track_outside.stl  track_semaphore.stl  track_visualization.stl  track_waypoint_1.stl  track_waypoint_10.stl  track_waypoint_11.stl  track_waypoint_2.stl  track_waypoint_3.stl  track_waypoint_4.stl  track_waypoint_5.stl  track_waypoint_6.stl  track_waypoint_7.stl  track_waypoint_8.stl  track_waypoint_9.stl  track_waypoints.stl
src/conde_simulator/conde_world/worlds/: conde_world.world
src/conde_simulator/gazebo_signalling_panel_control/src/: gazebo_signalling_panel_control_node.cpp
src/conde_simulator_extended/: utils.hh
src/conde_simulator_extended/conde_referee/: CMakeLists.txt  package.xml
src/conde_simulator_extended/conde_referee/src/: conde_referee_node.cpp
src/conde_simulator_extended/conde_world_sensors/: CMakeLists.txt  ContactParkingPlugin.cc  ContactParkingPlugin.hh  ContactPlugin.cc  ContactPlugin.hh  ContactSemaphorePlugin.cc  ContactSemaphorePlugin.hh  ContactWaypointsPlugin.cc  ContactWaypointsPlugin.hh  package.xml
src/conde_simulator_extended/ellipse_movement/: CMakeLists.txt  package.xml
src/conde_simulator_extended/ellipse_movement/src/: ellipse_movement.py
src/conde_simulator_extended/referee/: CMakeLists.txt  package.xml
src/conde_simulator_extended/referee/src/: referee.py
src/conde_simulator_extended/resources/: CMakeLists.txt  package.xml
src/conde_simulator_extended/resources/src/: logic.cpp  logic.h  robot.cpp  robot.h  robot_collision.cpp  robot_collision.h  robot_resources.h  utils.cpp  utils.h
